# case-3.1-tangential

docs/failure-analysis/: README.md
docs/runbooks/: hackernews_data_refresh_error_recovery.md  hackernews_recovery.sh
hackernews-viewer/: .env  .gitignore
hackernews-viewer/backend/: .env  .env.example  README.md  pyproject.toml  setup.py
hackernews-viewer/backend/app/: main.py
hackernews-viewer/backend/app/api/endpoints/: stories.py  system.py  users.py
hackernews-viewer/backend/app/core/: config.py  database.py
hackernews-viewer/backend/app/db/: crud.py  models.py
hackernews-viewer/backend/app/middleware/: logging_middleware.py
hackernews-viewer/backend/app/services/: hackernews.py
hackernews-viewer/backend/app/utils/: backup.py  logging.py
hackernews-viewer/backend/scripts/: backup_db.py  refresh_data.py  run_backup.py  run_backup_db.sh  run_refresh_data.sh  run_tests.sh  setup_backup_cron.sh  setup_cron.sh
hackernews-viewer/backend/tests/: conftest.py  test_api.py  test_crud.py  test_services.py
hackernews-viewer/frontend/: .env.example  README.md  pyproject.toml
hackernews-viewer/frontend/app/: main.py
hackernews-viewer/frontend/app/components/: comment_card.py  story_card.py
hackernews-viewer/frontend/app/utils/: api.py
hackernews-viewer/frontend/tests/: test_components.py
