[tool.poetry]
name = "hackernews-viewer-backend"
version = "0.1.0"
description = "Backend for HackerNews Viewer application"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
sqlmodel = "^0.0.24"
pydantic = "^2.6.1"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
aiosqlite = "^0.19.0"
alembic = "^1.13.1"
pydantic-settings = "^2.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
